<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginVertical="@dimen/spacing_large"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/facts_text_view_background"
                    android:padding="@dimen/spacing_tiny"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small"
                    app:drawableStartCompat="@drawable/ic_left_arrow"
                    app:drawableTint="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_tiny"
                    android:text="@string/back_button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:hint="@string/search_input_hint"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:endIconDrawable="@android:drawable/ic_menu_search"
                app:endIconMode="custom"
                app:endIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:text="@string/search_suggestions"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/search_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/suggestions_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:gravity="center"
            android:text="@string/search_no_suggestions_error"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/search_last_searches"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/last_searches_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            tools:listitem="@layout/last_search_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/loading_layout" />

    </LinearLayout>

</RelativeLayout>