<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/facts_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:paddingHorizontal="@dimen/spacing_small">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/facts_text_view_background"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/spacing_medium"
                    android:paddingVertical="@dimen/spacing_tiny">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:text="@string/facts_category"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_small" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/facts_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/facts_category_empty"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/facts_text_view_background"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/spacing_medium"
                    android:paddingVertical="@dimen/spacing_tiny"
                    tools:ignore="RelativeOverlap">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:text="@string/facts_quantity"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_small" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/facts_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/facts_quantity_empty"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/facts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/facts_container"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                tools:listitem="@layout/facts_item" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_huge"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_medium"
        android:visibility="gone"
        tools:text="Error" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        app:backgroundTint="@color/colorPrimary"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/loading_layout" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
